fix: add fix overlapping elements above navbar

--- a/src/components/Navbar/Navbar.module.scss
+++ b/src/components/Navbar/Navbar.module.scss
@@ -1,8 +1,3 @@
-.navbar {
-  position: sticky;
-  top: 0;
-}
-
 .toolbar {
   display: flex;
   justify-content: space-between;
